Revert "New function"
This reverts commit f98411bc773312c948b7b4b40d0e2678dad464e5.